# desktop-backend

./: .env.example  .gitignore  mcp_planner.py  mcp_server.py  mcp_tracker.py  mcp_viewer_server.py  pyproject.toml  render.yaml  requirements.txt
.claude/: settings.local.json
Plan/: Production_Module_Complete_Reference.md
Plan/Development_plan/: 3_Day_Development_Plan.md  candor_dashboard.html
Plan/Frontend/: 4_Job_Card_Engine_Frontend.md  5_Inventory_and_Tracking_Frontend.md  6_Day_End_and_Fulfillment_Frontend.md  7_AI_and_Revision_Frontend.md
Plan/Logical_plan/: Production_Planning_Logic.md
Plan/Plan test/: planning_prompt.txt  planning_prompt_with_stock.txt
Plan/main/: 1_Master_Data_Setup.md  2_Planning_Engine.md  3_MRP_and_Indent.md  4_Job_Card_Engine.md  5_Inventory_and_Tracking.md  6_Day_End_and_Fulfillment.md  7_AI_and_Revision.md
app/: config.py  main.py
app/Plan/: Production_Module_Complete_Reference.md
app/core/: helpers.py  types.py
app/data/: Physical Stock.xlsx  (+7 more)
data/: A-185 Stock Take.xlsx  BOM_Enrichment.xlsx  Dashboard_Pages_Summary.xlsx  FG_Master_Completion.xlsx  Floorwise utility dada.xlsx  GST Rate Setup CFPL & CDPL 18th Mar.xlsx  OFF grade Makhana Apr-Mar.xlsx  OFf Grade Almonds Apr-Mar.xlsx  OFf Grade Prunes Apr-Mar.xlsx  Off Grade Apricot Apr-Mar.xlsx  Off Grade Cashew Apr-Mar.xlsx  Off Grade Dates Apr-Mar.xlsx  Off Grade Peanuts Apr-Mar.xlsx  Off Grade Raisin Apr-Mar.xlsx  Process Loss Apr to Mar.xlsx  Sales Order Book Jan-March 21 CFPL.xlsx
docs/: FRONTEND_API_GUIDE.md  SO_PIPELINE_FLOW.md  claude_desktop_test_prompt.md
(+87 files in other folders)
