[project]
name = "backend"
version = "0.1.0"
description = "Candor Foods — SO Upload & Extraction Backend"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.20",
    "asyncpg>=0.30",
    "pydantic>=2.11",
    "pydantic-settings>=2.9",
    "rapidfuzz>=3.0",
    "openpyxl>=3.1",
]
